# Vinorsoft_Intern

day1/: b1.py  b2.py  b3.py  b4.py  b5.py
day2/: hrm.py  (+1 more)
day4-7/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
day4-7/alembic/: env.py
day4-7/alembic/versions/: 001_create_users_and_posts.py
day4-7/scripts/: create_admin.py
day4-7/src/api/: app.py
day4-7/src/api/v1/: auth.py  posts.py
day4-7/src/config/: settings.py
day4-7/src/db/: base.py  session.py
day4-7/src/models/: orm.py  schemas.py
day4-7/src/services/: auth.py  post.py  user.py
day8-12/: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
day8-12/apps/cart/: models.py  serializers.py  urls.py  views.py
day8-12/apps/cart/migrations/: 0001_initial.py
day8-12/apps/inventory/: models.py  serializers.py  views.py
day8-12/apps/inventory/migrations/: 0001_initial.py
day8-12/apps/orders/: models.py  serializers.py  signals.py  tasks.py  urls.py
day8-12/apps/orders/migration/: 0001_initial.py
day8-12/apps/users/: admin.py  models.py  serializers.py  urls.py
day8-12/apps/users/migrations/: 0001_initial.py
day8-12/config/: __init__.py  urls.py  wsgi.py
day8-12/config/settings/: base.py  local.py
day8-12/postman/: shop-service.postman_collection.json
day8-12/postman/collections/Shop Service API/.resources/: definition.yaml
day8-12/postman/collections/Shop Service API/Auth/: Cập nhật thông tin.request.yaml  Login (Khách hàng).request.yaml  Login.request.yaml  Refresh Token.request.yaml  Register.request.yaml  Thông tin tôi (Me).request.yaml
day8-12/postman/collections/Shop Service API/Cart — Giỏ hàng/: Thêm vào giỏ.request.yaml  Xem giỏ hàng.request.yaml  Xoá sản phẩm khỏi giỏ.request.yaml  Xoá toàn bộ giỏ hàng.request.yaml
day8-12/postman/collections/Shop Service API/Inventory — Danh mục/: Chi tiết danh mục.request.yaml  Danh sách danh mục.request.yaml  Tạo danh mục (Admin).request.yaml
day8-12/postman/collections/Shop Service API/Inventory — Sản phẩm/: Chi tiết sản phẩm.request.yaml  Cập nhật sản phẩm (Admin).request.yaml  Danh sách sản phẩm.request.yaml  Lọc theo danh mục + giá.request.yaml  Sản phẩm còn hàng.request.yaml  Tìm kiếm sản phẩm.request.yaml  Tạo sản phẩm (Admin).request.yaml
(+51 files in other folders)
